objects/PC_Event_Master__c.object
<CustomObject>
    <description>Meddra dictionary data</description>
    <fields>
        <fullName>PC_Event_HLGT_Code__c</fullName>
        <description>HLGT Code from MedDRA</description>
        <label>Event HLGT Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_HLGT__c</fullName>
        <description>HLGT description</description>
        <label>Event HLGT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Event_HLT_Code__c</fullName>
        <description>HLF Code from MedDRA</description>
        <label>Event HLT Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_HLT__c</fullName>
        <description>HLT description</description>
        <label>Event HLT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Event_LLT_Code__c</fullName>
        <description>LLT Code from MedDRA</description>
        <label>Event LLT Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_LLT__c</fullName>
        <description>LLT description</description>
        <label>Event LLT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Event_PT_Code__c</fullName>
        <description>PT Code from MedDRA</description>
        <label>Event PT Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_PT__c</fullName>
        <description>PT description</description>
        <label>Event PT</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Event_SOC_Code__c</fullName>
        <description>SOC code from MedDRA</description>
        <label>Event SOC Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Event_SOC__c</fullName>
        <description>SOC description</description>
        <label>Event SOC</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PC_Meddra_ID__c</fullName>
        <description>Meddra Version</description>
        <label>Meddra ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Meddra_Version__c</fullName>
        <description>Meddra Version</description>
        <label>Meddra Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Event Master</label>
    <nameField>
        <label>Event Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>